fix some bug by testing
