# backend/src/main/java/com/hades/foxtube/controller/LikeController.java
@@ -5,11 +5,10 @@ import com.hades.foxtube.dto.LikeDto;
 import com.hades.foxtube.mapper.LikeMapper;
 import com.hades.foxtube.model.Like;
 import com.hades.foxtube.service.LikeService;
+import java.net.URI;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.net.URI;
 
 /**
  * @Author: Hades @Date: 2024/5/29 @Description:
@@ -26,19 +25,24 @@ public class LikeController implements LikeApi {
   }
 
   @Override
-  public ResponseEntity<LikeDto> getLike(Integer videoId, Integer authorId, String authorization) {
-    return ResponseEntity.ok(likeMapper.toLikeDto(likeService.getLike(videoId, authorId)));
+  public ResponseEntity<LikeDto> getLike(Long videoId, Long authorId, String authorization) {
+    Like like = likeService.getLike(videoId, authorId);
+
+    if (like == null) {
+      return ResponseEntity.notFound().build();
+    }
+
+    return ResponseEntity.ok(likeMapper.toLikeDto(like));
   }
 
   @Override
-  public ResponseEntity<Object> deleteLike(
-      Integer id, Integer videoId, Integer authorId, String authorization) {
-    likeService.deleteLike(new Like(id, videoId, authorId));
+  public ResponseEntity<Object> deleteLike(Long id, String authorization) {
+    likeService.deleteLike(id);
     return ResponseEntity.ok().build();
   }
 
   @Override
-  public ResponseEntity<Object> addLike(String authorization, Integer videoId, Integer authorId) {
+  public ResponseEntity<Object> addLike(String authorization, Long videoId, Long authorId) {
     Like like = Like.create(videoId, authorId);
     likeService.insertLike(like);
     return ResponseEntity.created(URI.create("/like/" + like.getId())).build();
